third_party/rust/serde_json/v1/crate/tests/ui/unexpected_after_array_element.stderr
error: no rules expected the token `=>`
 --> tests/ui/unexpected_after_array_element.rs:4:18
  |
4 |     json!([ true => ]);
  |                  ^^ no rules expected this token in macro call
